--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "dropdown": "^0.2.0",
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-icons": "^4.2.0",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
