--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fa": "^1.0.1",
     "firebase": "^8.2.9",
+    "firebase-tools": "^9.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
