removes built files by adding to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ __pycache__/
 /src/support/service_credentials.json
 /src/support/venv
 /src/support/recipelist.json
-/build
+/build/
+firebase.json
+database.rules.json
+.firebaserc
